--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,7 @@
     box-sizing: border-box;
 }
 
-html {
-    font: normal 16px sans-serif;
-    color: #555;
-}
+html {}
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -23,40 +20,148 @@ a {
 }
 
 a:hover {
-    opacity: 0.6;
+    color: #e0e721;
 }
 
 h1 {
-    text-align: center;
-    color: navy;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: navy;
-    text-align: center;
-    border: solid navy;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    text-align: left;
+    color: whitesmoke;
 }
 
 img {
-    border-left: navy;
-    border-right: navy;
-    border-bottom: navy;
-    border-style: ridge;
+    border: 2px solid #111836;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 80px;
+}
+
+section:not(.hero):nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+ul {
+    list-style: none;
+}
+
+.grid {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+hr {
+    width: 250px;
+    height: 3px;
+    background-color: #3f51b5;
+    border: 0;
+    margin-bottom: 50px;
+}
+
+section h2.title {
+    text-transform: capitalize;
+    font: bold 32px "Permanent Marker", cursive, sans-serif;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+section p {
+    font: normal 16px "Roboto", sans-serif;
+    max-width: 960px;
+    line-height: 2;
+    padding: 0 20px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+@media screen and (max-width: 800px) {
+    section {
+        padding: 50px 20px;
+    }
+}
+
+/* Header Styles */
+
+header {
+
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 35px 100px 35px 100px;
+    animation: 1s fadein 0.5s forwards;
+    opacity: 0;
+    color: white;
+    overflow-x: hidden;
+    background-color: #111836;
+}
+
+@keyframes fadein {
+    100% {
+        opacity: 1;
+    }
+}
+
+header a {
+    color: whitesmoke;
+}
+
+header h1 {
+    font-family: "Quicksand", sans-serif;
+}
+
+header nav {
+    display: flex;
+    margin-right: -15px;
+}
+
+header nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+header nav li {
+    margin: 0 15px;
+}
+
+@media screen and (max-width: 800px) {
+    header {
+        padding: 20px 50px;
+        flex-direction: column;
+    }
+
+    header h2 {
+        margin-bottom: 15px;
+    }
+
+    header nav {
+        margin-right: 0;
+    }
+}
+
+/* Hero */
+.hero {
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    min-height: 100vh;
+    color: #353535;
+}
+
+.hero-content-area {
+    opacity: 0;
+    margin-top: 100px;
+    animation: 1s slidefade 1s forwards;
+}
+
+@keyframes slidefade {
+    100% {
+        opacity: 1;
+        margin: 0;
+    }
 }
